# palautusrepositorio

./: .gitignore  README.md  haara.txt  main.txt
viikko1/nhl-statistics/: .coverage
viikko1/nhl-statistics/src/: index.py  statistics_service.py
viikko1/nhl-statistics/src/tests/: statistics_service_test.py
viikko1/riippuvuuksien-injektointi/src/tests/: laskin_test.py
viikko2/git-branch-harjoitus/: README.md  changelog.txt  index.py
viikko2/nhl-reader/: .pylintrc
viikko2/nhl-reader/src/: index.py  player.py  playerReader.py  playerStats.py
viikko2/poetry-web/: pyproject.toml
viikko3/: retro.md
viikko3/hello-robot/: log.html  output.xml  report.html
viikko3/login/: log.html  output.xml  report.html
viikko3/login/src/services/: user_service.py
viikko3/login/src/tests/: home.robot  login.robot  register.robot  resource.robot
viikko4/maksukortti-mock/src/: kassapaate.py
viikko4/maksukortti-mock/src/tests/: kassapaate_test.py
viikko4/mock-demo/tests/: kauppa_test.py
viikko4/verkkokauppa/: .coverage
viikko4/verkkokauppa/src/tests/: __init__.py  kauppa_test.py
viikko5/: review.md  vibe.md
viikko5/tennis/src/: tennis_game.py
warehouse-web/: README.md  pyproject.toml
warehouse-web/src/: app.py  varasto.py
warehouse-web/templates/: base.html  create.html  index.html  warehouse.html
warehouse-web/tests/: conftest.py  test_app.py  test_varasto.py
